# LibSimpleEpoll

./: .clang-format  CMakeLists.txt  README.md  kaka
controllerNet/: CMakeLists.txt  ap.cpp  ap.hpp  aria.cpp  aria.hpp  channel.hpp  client.cpp  client.hpp  enums.hpp  lockedvector.hpp  mac_util.hpp  main.cpp  md5.cpp  md5.hpp  packet.cpp  packet.hpp  pol_collector.cpp  pol_collector.hpp  protocol.hpp  publicmemory.hpp  sha1v2.cpp  sha1v2.hpp  sha256.cpp  sha256.hpp  socketmanager.cpp  socketmanager.hpp  temp.cpp  var_util.hpp  wlan_provider.cpp  wlan_provider.hpp
libsepoll/: AcceptSEpoll.cpp  CMakeLists.txt  ConnectSEpoll.cpp  SEpoll.cpp  SEpoll.hpp  def_hdr.hpp  tclient.cpp  tpacket.hpp  tserver.cpp
test/testClient/: CMakeLists.txt
test/testServer/: CMakeLists.txt  main.cpp
testClient/: CMakeLists.txt  main.cpp
testServer/: CMakeLists.txt  main.cpp
